--- a/star-wars-api-app/src/App.css
+++ b/star-wars-api-app/src/App.css
@@ -1,5 +1,15 @@
+html {
+  height: 100%;
+  background-image: url('starwars_background.jfif');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
 .App {
   text-align: center;
+  height: 100%;
+
 }
 
 .App-logo {
@@ -32,6 +42,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
